# fastapi_template

./: .dockerignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
migrations/: 001_init_db.sql
postgres/: example.env
postgres/migrations/: 001_init_db.sql
src/: Dockerfile  database.py  dependencies.py  example.env  main.py
src/app/: .dockerignore  Dockerfile  database.py  dependencies.py  example.env  main.py  requirements.txt  settings.py  utils.py
src/app/models/: __init__.py  base.py  data.py  ticket.py  user.py
src/app/repositories/: __init__.py  data.py  ticket.py  user.py
src/app/routers/: __init__.py  data.py  ticket.py  user.py
src/app/schemes/internal/: __init__.py  data.py  ticket.py  user.py
src/app/services/: __init__.py  data.py  ticket.py  user.py
src/models/: __init__.py  base.py  ticket.py  user.py
src/repositories/: __init__.py  ticket.py  user.py
src/routers/: __init__.py  ticket.py  user.py
src/schemes/internal/: __init__.py  ticket.py  user.py
src/services/: __init__.py  ticket.py  user.py
