[tool.poetry]
name = "fastapi_template"
version = "0.1.0"
description = ""
authors = ["Vasilii Safronov <vasi1988@mail.ru>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.111.0"}
rodi = "^2.0.6"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
uvicorn = {extras = ["standard"], version = "^0.29.0"}
asyncpg = "^0.29.0"
gunicorn = "^22.0.0"
python-dotenv = "^1.0.1"
backoff = "^2.2.1"

[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
