[tool.poetry]
name = "fastapi_template"
version = "0.1.0"
description = ""
authors = ["Vasilii Safronov <vasi1988@mail.ru>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = { extras = ["all"], version = "^0.111.0" }
rodi = "^2.0.6"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.31" }
uvicorn = { extras = ["standard"], version = "^0.30.1" }
asyncpg = "^0.29.0"
gunicorn = "^22.0.0"
python-dotenv = "^1.0.1"
backoff = "^2.2.1"

[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
ruff = "^0.5.1"
pre-commit = "^3.7.1"
mypy = "^1.10.1"

[tool.blue]
line-length = 120

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "F",   #Pyflakes
    "B",   #flake8-bugbear
    "A",   #flake8-builtins
    "C4",  #flake8-comprehensions
    "ERA", #eradicate
    "I",   #isort
    "PT",  #flake8-pytest-style
    "C90", #mccabe
    "N",   #pep8-naming
    "E",   #pycodestyle error
    "PL"   #Pylint
]

[tool.ruff.lint.per-file-ignores]
"src/routers/*" = ["B008"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
