[project]
name = "fastapi-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.1"
dependencies = [
    "asyncpg>=0.30.0",
    "backoff>=2.2.1",
    "fastapi[all]>=0.115.8",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.0.1",
    "rodi>=2.0.6",
    "sqlalchemy[asyncio]>=2.0.37",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
lint = [
    "blue>=0.9.1",
    "mypy>=1.14.1",
    "pre-commit>=4.1.0",
    "ruff>=0.9.4",
]

[tool.blue]
line-length = 120

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "F",   #Pyflakes
    "B",   #flake8-bugbear
    "A",   #flake8-builtins
    "C4",  #flake8-comprehensions
    "ERA", #eradicate
    "I",   #isort
    "PT",  #flake8-pytest-style
    "C90", #mccabe
    "N",   #pep8-naming
    "E",   #pycodestyle error
    "PL"   #Pylint
]

[tool.ruff.lint.per-file-ignores]
"src/routers/*" = ["B008"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true
